fix alignment problems for current user header-box

--- a/resources/private/common-html/css/main.css
+++ b/resources/private/common-html/css/main.css
@@ -1532,10 +1532,6 @@ nav .header-menu .header-box a, nav .header-menu .header-box span {
   vertical-align: middle;
 }
 
-/* line 168, ../sass/partials/_header.scss */
-nav .julkipano-brand .header-box {
-  vertical-align: middle;
-}
 /* line 15, ../sass/partials/_header.scss */
 nav .julkipano-brand .header-box a {
   font-size: 16px;
@@ -1569,10 +1565,22 @@ nav .julkipano-brand .header-box a span {
   vertical-align: middle;
 }
 /* line 171, ../sass/partials/_header.scss */
-nav .julkipano-brand .header-box span {
+nav .julkipano-brand .header-box .julkipano-user {
+  font-size: 16px;
+  vertical-align: middle;
+  white-space: nowrap;
+  position: relative;
+  display: inline-block;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  line-height: 60px;
   color: #fff;
 }
-/* line 175, ../sass/partials/_header.scss */
+/* line 181, ../sass/partials/_header.scss */
+nav .julkipano-brand .header-box .julkipano-user span {
+  vertical-align: middle;
+}
+/* line 185, ../sass/partials/_header.scss */
 nav .julkipano-brand .language-closed {
   background-color: inherit;
   display: inline-block;
@@ -1625,7 +1633,7 @@ nav .julkipano-brand .language-closed a, nav .julkipano-brand .language-closed s
   text-transform: uppercase;
   overflow: hidden;
 }
-/* line 178, ../sass/partials/_header.scss */
+/* line 188, ../sass/partials/_header.scss */
 nav .julkipano-brand .language-open {
   background-color: #555555;
   display: inline-block;
@@ -1711,7 +1719,7 @@ nav .julkipano-brand .nav-bottom ul li a span {
   vertical-align: middle;
 }
 
-/* line 199, ../sass/partials/_header.scss */
+/* line 209, ../sass/partials/_header.scss */
 .nav-notification {
   width: 100%;
   background-color: #f39129;
@@ -1725,12 +1733,12 @@ nav .julkipano-brand .nav-bottom ul li a span {
   margin-top: 60px;
   margin-bottom: -60px;
 }
-/* line 210, ../sass/partials/_header.scss */
+/* line 220, ../sass/partials/_header.scss */
 .nav-notification:after {
   clear: both;
 }
 
-/* line 218, ../sass/partials/_header.scss */
+/* line 228, ../sass/partials/_header.scss */
 .admin .nav-notification {
   margin-top: 106px;
   margin-bottom: -48px;
