--- a/resources/private/common-html/sass/partials/_header.scss
+++ b/resources/private/common-html/sass/partials/_header.scss
@@ -167,9 +167,19 @@ nav {
   .julkipano-brand {
     .header-box {
       @include nav-link($link: $blue, $hover: white);
+    }
+    .header-box .julkipano-user {
+      font-size: 16px;
       vertical-align: middle;
+      white-space: nowrap;
+      position: relative;
+      display: inline-block;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      line-height: 60px;
+      color: #fff;
       span {
-        color: #fff;
+        vertical-align: middle;
       }
     }
     .language-closed {
